Added delete categories handler
