# controllers/CategoryController.go
@@ -12,16 +12,19 @@ type CategoryControler struct {
 	createHandler *categoryHandler.CreateCategoryHandler
 	getHandler    *categoryHandler.GetCategoryHandler
 	updateHandler *categoryHandler.UpdateCategoryHandler
+	deleteHandler *categoryHandler.DeleteCategoryHandler
 }
 
 func NewCategoryControler(
 	createHandler *categoryHandler.CreateCategoryHandler,
 	getHandler *categoryHandler.GetCategoryHandler,
-	updateHandler *categoryHandler.UpdateCategoryHandler) *CategoryControler {
+	updateHandler *categoryHandler.UpdateCategoryHandler,
+	deleteHandler *categoryHandler.DeleteCategoryHandler) *CategoryControler {
 	return &CategoryControler{
 		createHandler: createHandler,
 		getHandler:    getHandler,
 		updateHandler: updateHandler,
+		deleteHandler: deleteHandler,
 	}
 }
 
@@ -69,4 +72,17 @@ func (cc *CategoryControler) Update(c *gin.Context) {
 	}
 	cc.updateHandler.Handler(command)
 	c.JSON(http.StatusOK, gin.H{"message": "Successfully updated category"})
+}
+
+// @Summary Обновить категорию
+// @Tags category
+// @Accept json
+// @Param id path string true "Идентификатор категории"
+// @Router /api/v1/category/delete/{id} [delete]
+func (cc *CategoryControler) Delete(c *gin.Context) {
+	id := c.Param("id")
+	var command categoryCommands.DeleteCategoryCommand
+	command.ID = id
+	cc.deleteHandler.Handler(command)
+	c.JSON(http.StatusOK, gin.H{"message": "Successfully deleted category"})
 }
