# docs/swagger.json
@@ -28,6 +28,27 @@
                 "responses": {}
             }
         },
+        "/api/v1/category/delete/{id}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "category"
+                ],
+                "summary": "Обновить категорию",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Идентификатор категории",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/category/getall": {
             "post": {
                 "consumes": [
