# handlers/category/GetCategoriesHandler.go
@@ -18,25 +18,26 @@ func NewGetCategoryHandler(db *dbcontext.PgContext) *GetCategoryHandler {
 func (gch GetCategoryHandler) Handler(query category.GetCategoryQuery) *[]entity.Category {
 	var categories []entity.Category
 	gch.db.Find(&categories)
-	return group(categories, nil, 0)
+	categories = group(categories, nil, 0)
+	return &categories
 }
 
-func group(categories []entity.Category, parrent *entity.Category, iteration int) *[]entity.Category {
+func group(categories []entity.Category, parrent *entity.Category, iteration int) []entity.Category {
 	var groupedCategories []entity.Category
 	if parrent == nil && iteration == 0 {
 		for i := range categories {
 			if categories[i].ParentID == nil {
-				categories[i].Children = *group(categories, &categories[i], iteration+1)
+				categories[i].Children = group(categories, &categories[i], iteration+1)
 				groupedCategories = append(groupedCategories, categories[i])
 			}
 		}
 	} else if parrent != nil {
 		for i := range categories {
 			if categories[i].ParentID != nil && *categories[i].ParentID == parrent.ID {
-				categories[i].Children = *group(categories, &categories[i], iteration+1)
+				categories[i].Children = group(categories, &categories[i], iteration+1)
 				groupedCategories = append(groupedCategories, categories[i])
 			}
 		}
 	}
-	return &groupedCategories
+	return groupedCategories
 }
